# remoteCliNodes

./: .gitignore  CMakeLists.txt  Readme.md
proto/: messages.proto
src/: .node.cpp.kate-swp  balancingserver.cpp  balancingserver.h  client.cpp  client.h  main.cpp  masterlistener.cpp  masterlistener.h  node.cpp  node.h  protobufsocket.cpp  protobufsocket.h  registernodeaddress.cpp  registernodeaddress.h  worker.cpp  worker.h
src/register/: main.cpp
test/: simple.cpp
